--- a/paragura/Makefile
+++ b/paragura/Makefile
@@ -1,2 +1,2 @@
-main: main.c motor.c playSound.c
-	gcc -o muro main.c motor.c playSound.c -lm
+main: main.c motor.c playSound.c compass.c
+	gcc -o muro main.c motor.c playSound.c compass.c -lm
